--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
-    const socket = io("https://YOUR_RENDER_URL"); // Replace with your Render server URL
+    const socket = io("https://webrtc-signal.onrender.com"); // Replace with your Render server URL
     const pc = new RTCPeerConnection();
 
     const localVideo = document.getElementById("localVideo");
