--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
     const socket = io("https://webrtc-signal.onrender.com"); // Replace with your Render server URL
-    const pc = new RTCPeerConnection();
+    const pc = new RTCPeerConnection({
+  iceServers: [
+    { urls: "stun:stun.l.google.com:19302" } // free Google STUN server
+  ]
+});
+
 
     const localVideo = document.getElementById("localVideo");
     const remoteVideo = document.getElementById("remoteVideo");
