--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
     const socket = io("https://webrtc-signal.onrender.com"); // Replace with your Render server URL
     const pc = new RTCPeerConnection({
   iceServers: [
-    { urls: "stun:stun.l.google.com:19302" } // free Google STUN server
+    { urls: "stun:stun.l.google.com:19302" },
+    {
+      urls: "turn:global.relay.metered.ca:80",
+      username: "openai",
+      credential: "openai123"
+    }
   ]
 });
+
+
 
 
     const localVideo = document.getElementById("localVideo");
