--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
-    const socket = io("https://YOUR_RENDER_URL"); // replace with your Render URL
+    const socket = io("https://webrtc-signal.onrender.com"); // replace with your Render URL
     let roomCode = null;
     let pc;
 
