--- a/index.html
+++ b/index.html
@@ -1,89 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>WebRTC Rooms Demo</title>
+  <meta charset="UTF-8">
+  <title>WebRTC Multi-User Demo</title>
+  <script src="/socket.io/socket.io.js"></script>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 40px; }
-    video { width: 45%; margin: 5px; border: 2px solid #333; }
+    body { font-family: Arial, sans-serif; text-align: center; background: #f3f3f3; }
+    #videos { display: flex; flex-direction: column; align-items: center; gap: 10px; }
+    video { width: 400px; border: 2px solid #444; border-radius: 8px; }
   </style>
 </head>
 <body>
-  <h2>WebRTC with Rooms</h2>
-
-  <div id="controls">
-    <button id="createRoom">Create Room</button>
-    <input id="roomCodeInput" placeholder="Enter 4-digit code">
-    <button id="joinRoom">Join Room</button>
-    <p id="roomDisplay"></p>
+  <h2>📹 WebRTC Multi-User Demo</h2>
+  <div id="videos">
+    <video id="localVideo" autoplay muted playsinline></video>
   </div>
 
-  <video id="localVideo" autoplay playsinline muted></video>
-  <video id="remoteVideo" autoplay playsinline></video>
-
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script>
-    const socket = io("https://webrtc-signal.onrender.com"); 
-let pc;
+    const socket = io();
+    const localVideo = document.getElementById("localVideo");
+    const videosDiv = document.getElementById("videos");
 
-// Create PeerConnection
-function createPeerConnection() {
-  pc = new RTCPeerConnection({
-    iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
-  });
+    let localStream;
+    const peers = {}; // store all peers
 
-  // Send ICE candidates to peer
-  pc.onicecandidate = (event) => {
-    if (event.candidate) {
-      socket.emit("candidate", { room: roomCode, candidate: event.candidate });
+    async function init() {
+      localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+      localVideo.srcObject = localStream;
     }
-  };
 
-  // Show remote video
-  pc.ontrack = (event) => {
-    document.getElementById("remoteVideo").srcObject = event.streams[0];
-  };
+    socket.on("user-joined", async (id) => {
+      console.log("User joined:", id);
+      const pc = createPeer(id, true);
+      peers[id] = pc;
+    });
 
-  // Add local stream
-  localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
-}
+    socket.on("offer", async (data) => {
+      console.log("Received offer from", data.caller);
+      const pc = createPeer(data.caller, false);
+      peers[data.caller] = pc;
+      await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
+      const answer = await pc.createAnswer();
+      await pc.setLocalDescription(answer);
+      socket.emit("answer", { sdp: answer, target: data.caller });
+    });
 
-// Handle "ready" → only first user makes offer
-socket.on("ready", async () => {
-  if (pc) {
-    const offer = await pc.createOffer();
-    await pc.setLocalDescription(offer);
-    socket.emit("offer", { room: roomCode, offer });
-  }
-});
+    socket.on("answer", async (data) => {
+      console.log("Received answer from", data.caller);
+      const pc = peers[data.caller];
+      await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
+    });
 
-// Handle Offer
-socket.on("offer", async (offer) => {
-  if (pc) {
-    await pc.setRemoteDescription(new RTCSessionDescription(offer));
-    const answer = await pc.createAnswer();
-    await pc.setLocalDescription(answer);
-    socket.emit("answer", { room: roomCode, answer });
-  }
-});
+    socket.on("ice-candidate", async (data) => {
+      const pc = peers[data.from];
+      if (pc) {
+        try {
+          await pc.addIceCandidate(new RTCIceCandidate(data.candidate));
+        } catch (e) {
+          console.error("Error adding ICE candidate", e);
+        }
+      }
+    });
 
-// Handle Answer
-socket.on("answer", async (answer) => {
-  if (pc) {
-    await pc.setRemoteDescription(new RTCSessionDescription(answer));
-  }
-});
+    socket.on("user-left", (id) => {
+      console.log("User left:", id);
+      if (peers[id]) {
+        peers[id].close();
+        delete peers[id];
+        const vid = document.getElementById(id);
+        if (vid) vid.remove();
+      }
+    });
 
-// Handle ICE Candidates
-socket.on("candidate", async (candidate) => {
-  if (pc) {
-    try {
-      await pc.addIceCandidate(new RTCIceCandidate(candidate));
-    } catch (e) {
-      console.error("Error adding ICE candidate", e);
+    function createPeer(id, initiator) {
+      const pc = new RTCPeerConnection({
+        iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
+      });
+
+      localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
+
+      pc.ontrack = (event) => {
+        let video = document.getElementById(id);
+        if (!video) {
+          video = document.createElement("video");
+          video.id = id;
+          video.autoplay = true;
+          video.playsinline = true;
+          videosDiv.appendChild(video);
+        }
+        video.srcObject = event.streams[0];
+      };
+
+      pc.onicecandidate = (event) => {
+        if (event.candidate) {
+          socket.emit("ice-candidate", { target: id, candidate: event.candidate });
+        }
+      };
+
+      if (initiator) {
+        pc.onnegotiationneeded = async () => {
+          const offer = await pc.createOffer();
+          await pc.setLocalDescription(offer);
+          socket.emit("offer", { sdp: offer, target: id });
+        };
+      }
+
+      return pc;
     }
-  }
-});
 
+    init();
   </script>
 </body>
 </html>
