--- a/index.html
+++ b/index.html
@@ -3,112 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <title>WebRTC Multi-User Demo</title>
-  <script src="/socket.io/socket.io.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; background: #f3f3f3; }
-    #videos { display: flex; flex-direction: column; align-items: center; gap: 10px; }
-    video { width: 400px; border: 2px solid #444; border-radius: 8px; }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; text-align: center; }
+    video { width: 300px; margin: 10px; border-radius: 8px; background: black; }
+    #videos { display: flex; flex-wrap: wrap; justify-content: center; }
   </style>
 </head>
 <body>
-  <h2>📹 WebRTC Multi-User Demo</h2>
-  <div id="videos">
-    <video id="localVideo" autoplay muted playsinline></video>
-  </div>
+  <h2>WebRTC Multi-User Demo</h2>
+  <div id="videos"></div>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const localVideo = document.getElementById("localVideo");
+    const peers = {};
     const videosDiv = document.getElementById("videos");
 
-    let localStream;
-    const peers = {}; // store all peers
+    const localVideo = document.createElement("video");
+    localVideo.autoplay = true;
+    localVideo.muted = true;
+    videosDiv.appendChild(localVideo);
 
-    async function init() {
-      localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-      localVideo.srcObject = localStream;
-    }
+    navigator.mediaDevices.getUserMedia({ video: true, audio: true })
+      .then(stream => {
+        localVideo.srcObject = stream;
 
-    socket.on("user-joined", async (id) => {
-      console.log("User joined:", id);
-      const pc = createPeer(id, true);
-      peers[id] = pc;
-    });
+        socket.on("signal", async (data) => {
+          if (data.id === socket.id) return;
 
-    socket.on("offer", async (data) => {
-      console.log("Received offer from", data.caller);
-      const pc = createPeer(data.caller, false);
-      peers[data.caller] = pc;
-      await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
-      const answer = await pc.createAnswer();
-      await pc.setLocalDescription(answer);
-      socket.emit("answer", { sdp: answer, target: data.caller });
-    });
+          let peer = peers[data.id];
+          if (!peer) {
+            peer = new RTCPeerConnection();
+            peers[data.id] = peer;
 
-    socket.on("answer", async (data) => {
-      console.log("Received answer from", data.caller);
-      const pc = peers[data.caller];
-      await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
-    });
+            // Add our stream to peer
+            stream.getTracks().forEach(track => peer.addTrack(track, stream));
 
-    socket.on("ice-candidate", async (data) => {
-      const pc = peers[data.from];
-      if (pc) {
-        try {
-          await pc.addIceCandidate(new RTCIceCandidate(data.candidate));
-        } catch (e) {
-          console.error("Error adding ICE candidate", e);
-        }
-      }
-    });
+            // Create video element for peer
+            const remoteVideo = document.createElement("video");
+            remoteVideo.autoplay = true;
+            remoteVideo.id = data.id;
+            videosDiv.appendChild(remoteVideo);
 
-    socket.on("user-left", (id) => {
-      console.log("User left:", id);
-      if (peers[id]) {
-        peers[id].close();
-        delete peers[id];
-        const vid = document.getElementById(id);
-        if (vid) vid.remove();
-      }
-    });
+            peer.ontrack = (event) => {
+              remoteVideo.srcObject = event.streams[0];
+            };
 
-    function createPeer(id, initiator) {
-      const pc = new RTCPeerConnection({
-        iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
+            peer.onicecandidate = (event) => {
+              if (event.candidate) {
+                socket.emit("signal", { candidate: event.candidate });
+              }
+            };
+          }
+
+          if (data.offer) {
+            await peer.setRemoteDescription(new RTCSessionDescription(data.offer));
+            const answer = await peer.createAnswer();
+            await peer.setLocalDescription(answer);
+            socket.emit("signal", { answer });
+          }
+
+          if (data.answer) {
+            await peer.setRemoteDescription(new RTCSessionDescription(data.answer));
+          }
+
+          if (data.candidate) {
+            try {
+              await peer.addIceCandidate(new RTCIceCandidate(data.candidate));
+            } catch (e) {
+              console.error("Error adding ICE candidate", e);
+            }
+          }
+        });
+
+        // When a new user joins, create an offer
+        socket.on("user-connected", async (id) => {
+          console.log("New user:", id);
+          const peer = new RTCPeerConnection();
+          peers[id] = peer;
+
+          stream.getTracks().forEach(track => peer.addTrack(track, stream));
+
+          const remoteVideo = document.createElement("video");
+          remoteVideo.autoplay = true;
+          remoteVideo.id = id;
+          videosDiv.appendChild(remoteVideo);
+
+          peer.ontrack = (event) => {
+            remoteVideo.srcObject = event.streams[0];
+          };
+
+          peer.onicecandidate = (event) => {
+            if (event.candidate) {
+              socket.emit("signal", { candidate: event.candidate });
+            }
+          };
+
+          const offer = await peer.createOffer();
+          await peer.setLocalDescription(offer);
+          socket.emit("signal", { offer });
+        });
+
+        socket.on("user-disconnected", (id) => {
+          const video = document.getElementById(id);
+          if (video) video.remove();
+          if (peers[id]) peers[id].close();
+          delete peers[id];
+        });
       });
-
-      localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
-
-      pc.ontrack = (event) => {
-        let video = document.getElementById(id);
-        if (!video) {
-          video = document.createElement("video");
-          video.id = id;
-          video.autoplay = true;
-          video.playsinline = true;
-          videosDiv.appendChild(video);
-        }
-        video.srcObject = event.streams[0];
-      };
-
-      pc.onicecandidate = (event) => {
-        if (event.candidate) {
-          socket.emit("ice-candidate", { target: id, candidate: event.candidate });
-        }
-      };
-
-      if (initiator) {
-        pc.onnegotiationneeded = async () => {
-          const offer = await pc.createOffer();
-          await pc.setLocalDescription(offer);
-          socket.emit("offer", { sdp: offer, target: id });
-        };
-      }
-
-      return pc;
-    }
-
-    init();
   </script>
 </body>
 </html>
