--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
   <script>
     const socket = io("https://webrtc-signal.onrender.com"); // your Render server URL
 
-    // ✅ Add STUN config here
+    // ✅ Using Xirsys STUN + TURN
     const pc = new RTCPeerConnection({
       iceServers: [
-        { urls: "stun:stun.l.google.com:19302" }
+        { urls: "stun:stun.l.google.com:19302" },
+        { urls: "stun:global.xirsys.net" },
+        {
+          urls: [
+            "turn:global.xirsys.net:80?transport=udp",
+            "turn:global.xirsys.net:3478?transport=udp",
+            "turns:global.xirsys.net:443?transport=tcp",
+            "turns:global.xirsys.net:5349?transport=tcp"
+          ],
+          username: "backup27914",       // 👈 replace with your ident
+          credential: "18954eb4-8410-11f0-aaf2-0242ac140003"     // 👈 replace with your secret
+        }
       ]
     });
 
